--- a/appSks.config
+++ b/appSks.config
@@ -1,4 +1,4 @@
 "AadClientId": "852e2146-d80e-4630-82d0-df604f8d9d97",
 "AadSecret": "czp8Q~0gcVKfH-J8DPeQAdzTciOqYB2t9AZdRdBv",
 "AadTenantDomain": "ConsciaSocLab.onmicrosoft.com",
-"AadTenantId": "23a3e548-3c8b-4593-80af-dbecb008d3f3"
+"AadTenantId": "23a3e548-3c8b-4593-80af-dbecb008d3f3",
